coreccion de errores 2

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<HTML>
 <head>
 	<meta charset="utf-8">
-	<script src="scripts.js"> </script>
-</>
+	
+</head>
 <body>
 
 	<script>
@@ -12,4 +12,4 @@
 
 </body>
 <script src="scripts.js"> </script>
-</html>
+</HTML>
